[package]
name = "dnsupdate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5.9"
tldextract = "0.6.0"
base64 = "0.13.1"
